<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/dark_wallpaper">

    <EditText
        android:id="@+id/email_dialog"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/email_text"
        android:inputType="textEmailAddress"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/password_dialog"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:layout_gravity="center"
        android:text="@string/login_button_text"
        android:background="@color/colorPrimary" />

</LinearLayout>